--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@ footer p {
 
     <div class="menu-container">
       <a href="stats.html" class="menu-btn">GENERADOR DE STATS</a>
-      <a href="https://www.docdroid.net/1auqYzE/dd-5a-edicion-hoja-o-ficha-editable-pdf" class="menu-btn">FICHA</a>
-      <a  onclick="descargarFitxa2()" class="menu-btn">FICHA ULTA MEGA PRO OMG</a>
+      <a href="https://www.docdroid.net/1auqYzE/dd-5a-edicion-hoja-o-ficha-editable-pdf" class="menu-btn">FICHA (Recuerda Descargar)</a>
+      <a  onclick="descargarFitxa2()" class="menu-btn">FICHA MEGA PRO (Recuerda Descargar)</a>
       <a href="https://docs.google.com/document/d/1Dlcji8oR8gjisp-Uua9jirKSnK_iLwy97cX9NxeJq94/edit?usp=sharing" class="menu-btn">RAZAS</a>
       <a href="clases.html" class="menu-btn">CLASES</a>
       <a href="https://docs.google.com/document/d/1d3crS_GMVS5TDmTpqnTaOYPt7tNXUt4iTDLVI3n2s0g/edit?usp=sharing" class="menu-btn">ARMAS</a>
@@ -134,7 +134,7 @@ footer p {
   <script>
     function descargarFitxa2() {
         const enlace = document.createElement("a");
-        enlace.href = "media\FitxaDnD2.pdf"; // Reemplaza con la ruta de tu PDF
+        enlace.href = "FitxaDnD2.pdf"; // Reemplaza con la ruta de tu PDF
         enlace.download = "FitxaDnD2.pdf"; // Nombre del archivo descargado
         enlace.click();
     }
