--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ footer p {
       <a onclick="descargarFitxa2()" class="menu-btn">FICHA MEGA PRO </a>
       <a href="https://docs.google.com/document/d/1Dlcji8oR8gjisp-Uua9jirKSnK_iLwy97cX9NxeJq94/edit?usp=sharing" class="menu-btn" target="_blank">RAZAS DOC</a>
       <a href="razas.html" class="menu-btn" target="_blank">RAZAS NUEVO</a>
-      <a href="clases.html" class="menu-btn" target="_blank">CLASES</a>
+      <a href="https://docs.google.com/document/d/1mbq8Mv45ZaRNtPgDBH7BGb3B661Y-dpw_tD237Pb7-M/edit?usp=sharing" class="menu-btn" target="_blank">CLASES</a>
       <a href="https://nivel20.com/games/dnd-5/items" class="menu-btn" target="_blank">ARMAS</a>
       <a href="https://docs.google.com/document/d/1amakRRCoQZRiCYnIYT99JBnrja_tY1GNIBNdu3tHcFU/edit?usp=sharing" class="menu-btn" target="_blank">RUNAS</a>
       <a href="https://docs.google.com/document/d/1AMj_ZXyBYFPHXMJBCPIUntG5cOepWFOA0cCoEsT6SNs/edit?usp=sharing" class="menu-btn" target="_blank">REGLAS</a>
