--- a/razas.html
+++ b/razas.html
@@ -63,7 +63,6 @@
         flex-direction: row;
         align-items: stretch;
         width: 100%;
-        max-width: fit-content;
         background: #242424;
         border-radius: 15px;
         overflow: hidden;
@@ -280,6 +279,7 @@
         }
         .character-container {
           flex-direction: column; /* Organizar en columnas para móviles */
+          width: 95%;
         }
 
         .character-image {
