--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
     function descargarFitxa() {
       const enlace = document.createElement("a");
-      enlace.href = "FitxaDnD.pdf";
+      enlace.href = "FitxaDnD2.pdf";
       enlace.download = "FitxaDnD.pdf";
       enlace.click();
     }
