--- a/razas.html
+++ b/razas.html
@@ -454,17 +454,14 @@
         const url = `${baseUrl}?${params.toString()}`;
         window.open(url, "_blank");
       });
-    // Función para determinar el color del borde basado en los atributos más altos
-    function getBorderStyleForHighestAttributes(attributes, attributeColors) {
-      // Encuentra el valor máximo entre los atributos
-      const maxValue = Math.max(
+
+      function getBorderStyleForHighestAttributes(attributes, attributeColors) {
+        const maxValue = Math.max(
         ...Object.values(attributes).map((v) => parseInt(v, 10) || 0)
       );
-      // Encuentra todos los atributos que tienen el valor máximo
       const highestAttributes = Object.keys(attributes).filter(
         (key) => parseInt(attributes[key], 10) === maxValue
       );
-      // Si hay más de un atributo con el valor máximo (empate), crea un gradiente
       if (highestAttributes.length > 1) {
         const gradientStops = highestAttributes
           .map((attr, index) => {
@@ -475,26 +472,22 @@
           .join(", ");
         return `linear-gradient(90deg, ${gradientStops})`;
       }
-      // Si solo hay un atributo más alto, devuelve su color
       return attributeColors[highestAttributes[0]];
     }
     async function cargarRazas() {
       const charactersContainer = document.getElementById("characters");
       const directorio = "razas/";
       try {
-        // Cargar el índice de razas desde index.json
         const indexResponse = await fetch(`razas_index.json`);
         if (!indexResponse.ok)
           throw new Error("No se pudo cargar el índice de razas.");
         const archivos = await indexResponse.json();
-        // Iterar sobre los archivos listados en index.json
         for (const archivo of archivos) {
           const razaResponse = await fetch(`${directorio}${archivo}`);
           if (!razaResponse.ok) continue;
           const raza = await razaResponse.json();
           const container = document.createElement("div");
           container.classList.add("character-container");
-          // Añadir los atributos como un atributo de datos
           container.setAttribute("data-attributes", JSON.stringify(raza.attributes));
           // Determinar el color del borde basado en los atributos más altos
           const attributeColors = {
@@ -505,7 +498,7 @@
             wisdom: "MediumPurple",
             charisma: "HotPink",
           };
-          // Función para determinar el borde luminoso
+
           const getBorderStyleForHighestAttributes = (attributes) => {
             const maxValue = Math.max(
               ...Object.values(attributes).map((v) => parseInt(v, 10) || 0)
@@ -543,20 +536,19 @@
           );
           container.style.border = border;
           container.style.boxShadow = boxShadow;
-          // Aplicar el borde luminoso al contenedor
           container.style.border = `5px solid transparent`;
           container.style.backgroundImage = border.includes("linear-gradient") ?
             border :
             `none`;
           container.style.boxShadow = `0 0 15px ${boxShadow}`;
-          // Contenido textual
+
           const content = document.createElement("div");
           content.classList.add("character-content");
           content.style.backgroundImage = `url('${directorio}${archivo.replace(
               ".json",
               ".png"
             )}')`;
-          // Imagen
+          
           const image = document.createElement("div");
           image.classList.add("character-image");
           image.style.backgroundImage = `url('${directorio}${archivo.replace(
@@ -567,9 +559,9 @@
           // Título
           const title = document.createElement("div");
           title.classList.add("character-title");
-          title.textContent = raza.raceName.toUpperCase(); // Llama al método con paréntesis
+          title.textContent = raza.raceName.toUpperCase(); 
           content.appendChild(title);
-          // Descripción con saltos de línea
+
           const description = document.createElement("div");
           description.classList.add("character-description");
           description.innerHTML = raza.raceDescription.replace(/\n/g, "<br>");
@@ -630,7 +622,7 @@
 
           bonusAttributesContainer.appendChild(attributes);
           content.appendChild(bonusAttributesContainer);
-          // Tamaños y Velocidad
+
           const sizeSpeedContainer = document.createElement("div");
           sizeSpeedContainer.style.display = "flex";
           sizeSpeedContainer.style.justifyContent = "space-between";
@@ -642,7 +634,7 @@
             Grande: "1.5rem",
             Enorme: "1.8rem",
           };
-          // Generar los tamaños
+
           const sizesDiv = document.createElement("div");
           sizesDiv.style.flex = "4";
           sizesDiv.style.padding = "10px";
@@ -694,6 +686,7 @@
         console.error("Error cargando razas:", error);
       }
     }
+    
     async function generateJSON() {
       const raceName = document.getElementById("raceName").value.trim();
       const raceDescription = document
