--- a/stats.html
+++ b/stats.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="icon" href="media/casino.png" type="image/x-icon">
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Casino de Dragonas y Perronas</title>
@@ -222,14 +220,13 @@
 </head>
 <body>
   <audio autoplay loop>
-    <source src="media/casino.mp3" type="audio/mpeg">
+    <source src="casino.mp3" type="audio/mpeg">
   </audio>
-  
     <div class="casino-lights"></div>
     <div class="container">
         <div class="title-container">
             <div class="neon-sign">
-                <h1>Dragonas y Perronas</h1>
+                <a href="index.html"><h1 >Dragonas y Perronas</h1></a>
             </div>
         </div>
 
@@ -295,7 +292,6 @@
             container.appendChild(group);
         }
 
-        const music = document.getElementById("tragaperras");
         function animateRolls(set1Container, set2Container) {
             set1Container.innerHTML = '';
             set2Container.innerHTML = '';
@@ -304,11 +300,7 @@
             let currentRoll = 0;
 
             function rollOne() {
-              music.play();
-
                 if (currentRoll < rollsPerSet) {
-                                music.play();
-
                     const roll1 = rollAbilityScore();
                     const roll2 = rollAbilityScore();
 
