--- a/stats.html
+++ b/stats.html
@@ -220,7 +220,7 @@
 </head>
 <body>
   <audio autoplay loop>
-    <source src="casino.mp3" type="audio/mpeg">
+    <source src="media/casino.mp3" type="audio/mpeg">
   </audio>
     <div class="casino-lights"></div>
     <div class="container">
