--- a/razas.html
+++ b/razas.html
@@ -675,7 +675,7 @@
 
           // Contenedor de esperanza de vida
           const lifeSpanDiv = document.createElement("div");
-          lifeSpanDiv.textContent = `❤️ ${raza.lifeSpan || "?"} `;
+          lifeSpanDiv.textContent = ` ᴇ.ᴠ. ${raza.lifeSpan || "?"}  `;
           lifeSpanDiv.style.flex = "1";
           lifeSpanDiv.style.textAlign = "center";
           lifeSpanDiv.style.color = "#fff";
@@ -687,7 +687,7 @@
 
           // Contenedor de velocidad
           const speedDiv = document.createElement("div");
-          speedDiv.textContent = `Vel. ${raza.movementSpeed} c`;
+          speedDiv.textContent = `ᴠᴇʟ. ${raza.movementSpeed} c`;
           speedDiv.style.flex = "1";
           speedDiv.style.textAlign = "center";
           speedDiv.style.color = "#fff";
