--- a/razas.html
+++ b/razas.html
@@ -88,6 +88,11 @@
     .filter-button.active {
       background: linear-gradient(135deg, #4CAF50, #388E3C);
     }
+    .sort-button.active {
+  background-color: #d784d2; /* Verde para botón activo */
+  color: white;
+  box-shadow: 0 0 10px rgba(255, 0, 225, 0.7); /* Resaltado */
+}
 
     #characters {
       display: flex;
@@ -400,7 +405,7 @@
     </div>
   </div>
   <hr>
-  <span> Filtrar por atributos: </span>
+  <span> Filtrar: </span>
   <div id="filters" style="margin-top: 20px; display: flex; gap: 10px; justify-content: center;">
     <button class="button filter-button" data-attribute="strength">Fuerza</button>
     <button class="button filter-button" data-attribute="dexterity">Destreza</button>
@@ -409,7 +414,14 @@
     <button class="button filter-button" data-attribute="wisdom">Sabiduría</button>
     <button class="button filter-button" data-attribute="charisma">Carisma</button>
   </div>
-
+  <div id="sort-options" style="margin-top: 20px; display: flex; gap: 10px; justify-content: center;">
+    <button class="button sort-button" data-field="raceName" data-order="asc">A-Z ↑</button>
+    <button class="button sort-button" data-field="lifeSpan" data-order="asc">Esperanza de Vida ↑</button>
+    <button class="button sort-button" data-field="movementSpeed" data-order="asc">Velocidad ↑</button>
+    <button class="button sort-button" data-field="sizes" data-order="asc">Tamaño ↑</button>
+  </div>
+  
+  
 
 
   <div style="position: relative; width: 90%; max-width: 600px; margin-top: 20px;">
@@ -484,6 +496,77 @@
       }
       return attributeColors[highestAttributes[0]];
     }
+
+    function sortCharacters(field, order) {
+  const charactersContainer = document.getElementById("characters");
+  const characters = Array.from(charactersContainer.querySelectorAll(".character-container"));
+
+  characters.sort((a, b) => {
+    const dataA = JSON.parse(a.getAttribute("data-attributes"));
+    const dataB = JSON.parse(b.getAttribute("data-attributes"));
+
+    let valueA, valueB;
+
+    if (field === "raceName") {
+      // Orden alfabético
+      valueA = a.querySelector(".character-title").textContent.toLowerCase();
+      valueB = b.querySelector(".character-title").textContent.toLowerCase();
+    } else if (field === "lifeSpan") {
+      // Extraer el número después del guion en `lifeSpan`
+      const lifeSpanRegex = /-(\d+)/;
+      const matchA = lifeSpanRegex.exec(a.querySelector(".character-description").textContent) || [];
+      const matchB = lifeSpanRegex.exec(b.querySelector(".character-description").textContent) || [];
+      valueA = parseInt(matchA[1], 10) || 0;
+      valueB = parseInt(matchB[1], 10) || 0;
+    } else if (field === "movementSpeed") {
+      // Orden por velocidad de movimiento
+      valueA = parseInt(dataA.movementSpeed, 10) || 0;
+      valueB = parseInt(dataB.movementSpeed, 10) || 0;
+    } else if (field === "sizes") {
+      // Orden por tamaño mínimo
+      valueA = Math.min(...dataA.sizes);
+      valueB = Math.min(...dataB.sizes);
+    }
+
+    // Orden ascendente o descendente
+    if (order === "asc") return valueA > valueB ? 1 : -1;
+    if (order === "desc") return valueA < valueB ? 1 : -1;
+    return 0;
+  });
+
+  // Reorganizar los elementos en el contenedor
+  characters.forEach(character => charactersContainer.appendChild(character));
+}
+
+// Manejar clics en botones de ordenamiento
+document.querySelectorAll(".sort-button").forEach((button) => {
+  button.addEventListener("click", () => {
+    // Obtener el campo y el orden actual
+    const field = button.getAttribute("data-field");
+    const currentOrder = button.getAttribute("data-order");
+
+    // Alternar entre "asc" y "desc"
+    const newOrder = currentOrder === "asc" ? "desc" : "asc";
+
+    // Actualizar el atributo del botón
+    button.setAttribute("data-order", newOrder);
+
+    // Actualizar el texto del botón
+    const baseText = button.textContent.split(" ")[0]; // Obtiene el texto base antes de la flecha
+    button.textContent = `${baseText} ${newOrder === "asc" ? "↑" : "↓"}`;
+
+    // Llamar a la función de ordenamiento
+    sortCharacters(field, newOrder);
+
+    // Resaltar el botón activo (opcional)
+    document.querySelectorAll(".sort-button").forEach((btn) => {
+      btn.classList.remove("active");
+    });
+    button.classList.add("active");
+  });
+});
+
+
     async function cargarRazas() {
       const charactersContainer = document.getElementById("characters");
       const directorio = "razas/";
