--- a/index.html
+++ b/index.html
@@ -129,11 +129,10 @@
       <a onclick="descargarFitxa()" class="menu-btn">FICHA </a>
       <a href="https://docs.google.com/document/d/1Dlcji8oR8gjisp-Uua9jirKSnK_iLwy97cX9NxeJq94/edit?usp=sharing" class="menu-btn" target="_blank">RAZAS DOC</a>
       <a href="razas.html" class="menu-btn" target="_blank">RAZAS NUEVO</a>
-
       <a href="https://docs.google.com/document/d/1mbq8Mv45ZaRNtPgDBH7BGb3B661Y-dpw_tD237Pb7-M/edit?usp=sharing" class="menu-btn" target="_blank">CLASES</a>
-      <a href="https://nivel20.com/games/dnd-5/items" class="menu-btn" target="_blank">ARMAS</a>
-      <a href="aventuras.html" class="menu-btn" target="_blank">NUESTRAS AVENTURAS</a>
-      <a href="reglas.html" class="menu-btn" target="_blank">Guía DND</a>
+      <a href="https://nivel20.com/games/dnd-5/items" class="menu-btn" target="_blank">ARMAS Y ARMADURAS</a>
+      <a href="https://nivel20.com/games/dnd-5/spells?utf8=%E2%9C%93&q=&level=&school=&list=&tag=&order=level" class="menu-btn" target="_blank">CONJUROS Y TRUCOS</a>
+      <a href="reglas.html" class="menu-btn" target="_blank">GUÍA DND</a>
     </div>
 
     <footer>
